--- a/TODO
+++ b/TODO
@@ -2,8 +2,7 @@
 * Correctly handle vector-valued options
 * Report all option capabilities
 * Support authorization callbacks
-* ReadImage should return more information, such as DPI
-* Call sane_init as required by Open, not upon package init
+* Make sane_init / sane_exit explicit
 * Provide helper methods for common scanning options
 * Provide a no-frills, single-call scanning interface
 * Make errors report the API call in which they occur
